crates/ignis_driver/tests/snapshots/e2e_ok__array_literal.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
assertion_line: 10
expression: "common::format_e2e_result(&result)"
---
exit_code: 20
stdout: (empty)
stderr: (empty)
