crates/ignis_driver/tests/snapshots/e2e_ok__atom_is_copy_across_call.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
assertion_line: 17
expression: "common::format_e2e_result(&result)"
---
exit_code: 7
stdout: (empty)
stderr: (empty)
