crates/ignis_driver/tests/snapshots/e2e_ok__bare_builtin_call_without_at_prefix.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 4
stdout: (empty)
stderr: (empty)
